broken spacing fix

--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ p {
   border-radius: 23px;
   color: #7714B9;
   font-family: 'Poppins', sans-serif;
-  padding: 10px;
 }
 
 #experience {
